--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,1 +1,8 @@
-<h1> Testing </h1>
+<h1> MOVIE REVIEW</h1>
+
+<% @movies.each do |m|%>
+    <h3><%= m.title %> </h3>
+    
+<% end %>
+
+<%= link_to "Add Movie", new_movie_path %>
