--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,6 @@
 <h2><%= @movie.title %></h2>
+<div>
 <h3><%= @movie.movie_length %></h3>
 <h3><%= @movie.description %></h3>
 <h3><%= @movie.director %></h3>
+</div>
