--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <h1> MOVIE REVIEW</h1>
 
 <% @movies.each do |m|%>
-    <h3><%= m.title %> </h3>
+    <h3><%= link_to m.title, movie_path(m) %> </h3>
     
 <% end %>
 
