--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,3 +4,6 @@
 <h3><%= @movie.description %></h3>
 <h3><%= @movie.director %></h3>
 </div>
+
+<%= link_to "Edit",  edit_movie_path(@movie) %>
+<%= link_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure you want to delete?' %>
