--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
   <body>
 
+      <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+           <!-- Navbar content -->
+           <div class="container">
+
+           <div class="navbar-header">
+             <%= link_to "Movie Review", root_path, class: "navbar-brand"%>
+
+            </div>
+          </div>
+        </nav>
+
+
+
       <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
