--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,6 +5,6 @@
 <h3><%= @movie.director %></h3>
 </div>
 
-<%= link_to "Home", root_pat %>
+<%= link_to "Home", root_path %>
 <%= link_to "Edit",  edit_movie_path(@movie) %>
 <%= link_to "Delete", movie_path(@movie), :method => :delete, :confirm => 'Are you sure you want to delete?' %>
