--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,5 +6,14 @@
 </div>
 
 <%= link_to "Home", root_path %>
-<%= link_to "Edit",  edit_movie_path(@movie) %>
-<%= link_to "Delete", movie_path(@movie), :method => :delete, :confirm => 'Are you sure you want to delete?' %>
+
+<% if user_signed_in? %>
+
+    <% if @movie.user_id == current_user.id %>
+
+            <%= link_to "Edit",  edit_movie_path(@movie) %>
+            <%= link_to "Delete", movie_path(@movie), :method => :delete, :confirm => 'Are you sure you want to delete?' %>
+
+    <% end %> 
+
+<% end %>
