--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,63 @@
            <div class="navbar-header">
              <%= link_to "Movie Review", root_path, class: "navbar-brand"%>
 
+           <ul class="nav navbar-nav">         
+            <li><%= link_to "Sign Up", new_user_registration_path %></li>
+                <% if user_signed_in? %>
+                  <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %> </li>
+                <% else %>
+                  <li><%= link_to "Log In", user_session_path %></li>
+                <% end %>
+            </ul>
+
+
+            
+              <ul ul class="nav navbar-nav navbar-right">
+              <% if user_signed_in? %>
+                <li><%= link_to "Add Movie", new_movie_path %>
+              <% end %>
+
+
+            </ul>
+
+
+             
+           
+
+
+
+
+
+
+<div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a><br/>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown link
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
             </div>
           </div>
         </nav>
+
+        
 
 
 
