--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,81 +9,53 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
 
-      <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-           <!-- Navbar content -->
-           <div class="container">
+		<div class="container">
 
-           <div class="navbar-header">
-             <%= link_to "Movie Review", root_path, class: "navbar-brand"%>
+			<div class="navbar-header">
+				<%= link_to "Movie Review", root_path, class: "navbar-brand" %>
+			</div>
 
-           <ul class="nav navbar-nav">         
-            <li><%= link_to "Sign Up", new_user_registration_path %></li>
-            
-                <% if user_signed_in? %>
-                  <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %> </li>
-                <% else %>
-                  <li><%= link_to "Log In", user_session_path %></li>
-                <% end %>
-            </ul>
+			<ul class="nav navbar-nav">
+				
+				<% if user_signed_in? %>
+					<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+				<% else %>	
+					<li><%= link_to "Log In", new_user_session_path %></li>
+				<% end %>
+			</ul>
 
+			<ul class="nav navbar-nav navbar-right">
 
-            
-              <ul ul class="nav navbar-nav navbar-right">
-              <% if user_signed_in? %>
-                <li><%= link_to "Add Movie", new_movie_path %>
-              <% end %>
-
-
-            </ul>
-
-
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Categories <span class="caret"></span></a>
+					<ul class="dropdown-menu" role="menu">
+            <% Category.all.each do |c |%>
              
-           
+						<% end %>
+					</ul>
+				</li>
 
 
+				<% if user_signed_in? %>
+					<li><%= link_to "Add Movie", new_movie_path %></li>
+        <% else%>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
 
+				<% end %>
+				
+			</ul>
 
+		</div>
 
+	</nav>
 
-<div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a><br/>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown link
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
+	<p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
-            </div>
-          </div>
-        </nav>
-
-        
-
-
-
-      <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-
-
-
-
-    <%= yield %>
+  <div class="container">
+		<%= yield %>
+	</div>	
   </body>
 </html>
