--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,3 +1,10 @@
-<h1>Edit Book</h1>
+<h1>Edit Movie</h1>
 
-<%= render 'form' %>
+<%= simple_form_for @movie do |f| %>
+<%= f.select :category_id, @categories %>
+<%= f.input :title, label: "Movie Title" %>
+  <%= f.input :description %>
+  <%= f.input :director %>
+  <%= f.input :movie_length %>
+  <%= f.button :submit %>
+<% end %>
