--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,8 +1,10 @@
-<h2><%= @movie.title %></h2>
+<h2><%=  @movie.title %></h2>
 <div>
-<h3><%= @movie.movie_length %></h3>
-<h3><%= @movie.description %></h3>
-<h3><%= @movie.director %></h3>
+<h5>Category: <%=  @movie.category.name %> </h5>
+<h6>Movie Length:   <%=  @movie.movie_length %> </h6>
+<h6>Director:       <%=  @movie.director %>   </h6>
+<h3>Description:    <%=  @movie.description %> </h3>
+
 </div>
 
 <%= link_to "Home", root_path %>
