--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,10 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Categories <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
             <% Category.all.each do |c |%>
-             
+              <li>
+                
+                <%= link_to c.name, movies_path(category: c.name) %> 
+              </li>
 						<% end %>
 					</ul>
 				</li>
