create area for image upload

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for @movie do  |f| %>
-<%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select A Category") %>
-<%= f.input :title, label: "Movie Title" %>
+  <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select A Category") %>
+  <%= f.file_field :movie_img %>
+  <%= f.input :title, label: "Movie Title" %>
   <%= f.input :description %>
   <%= f.input :director %>
   <%= f.input :movie_length %>
