--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,8 +1,9 @@
 <h1>Edit Movie</h1>
 
-<%= simple_form_for @movie do |f| %>
-<%= f.select :category_id, @categories %>
-<%= f.input :title, label: "Movie Title" %>
+  <%= simple_form_for @movie do |f| %>
+  <%= f.select :category_id, @categories %>
+  <%= f.file_field :movie_img %>
+  <%= f.input :title, label: "Movie Title" %>
   <%= f.input :description %>
   <%= f.input :director %>
   <%= f.input :movie_length %>
