--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<h1> MOVIE REVIEW</h1>
+<h1> MOVIE REVIEW Testing this git </h1>
 
 <% @movies.each do |movie|%>
     <a href="/movies/ <%= movie.id %>">
