laying out the page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,14 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ .movie {
+     height: 350px;
+     width: 300px;
+ }
+
+ .movie-show {
+    height: 475px;
+    width:  500px;
+
+ }
