--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,31 +2,28 @@
 
     <div class="col-md-6">
     <%= image_tag @movie.movie_img.url(:movie_show), class: "movie-show"%>
-    
 </div>
+
 
 <div>
 
 <div class="row">
-
     <div class="col-md-10">
-
+            
         <div>
             <%= link_to "Add Review", new_movie_review_path(@movie) %>
+            <%= link_to "Back", root_path %>
         </div>
-
-
+         <%= render @movie.reviews %>
     </div>
 </div>
 
 
+            <h1><%=  @movie.title %></h1>
+            <p>Description:     <%=  @movie.description %>  </p>
 
-        
-    <h1><%=  @movie.title %></h1>
-    <p>Description:     <%=  @movie.description %>  </p>
-
-    <div class="col-md-10">
-    <%= link_to "Back", root_path %>
+<div class="col-md-10">
+    
         <h5>Category:       <%= @movie.category.name %> </h5>
         <h6>Movie Length:   <%=  @movie.movie_length %> </h6>
         <h6>Director:       <%=  @movie.director %>     </h6>
@@ -41,7 +38,7 @@
     <% if @movie.user_id == current_user.id %>
 
             <%= link_to "Edit",  edit_movie_path(@movie) %>
-            <%= link_to "Delete", movie_path(@movie), :method => :delete, :confirm => 'Are you sure you want to delete?' %>
+            <%= link_to "Delete", movie_path(@movie),  method: :delete, data: {confirm: "Are you sure"} %>
 
     <% end %> 
 
