--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -2,5 +2,8 @@
 <p><%= review.comment %> </p>
 
     <%= link_to "Edit", edit_movie_review_path(review.movie, review)%>
-    <%= link_to "Delete", movie_review_path(@movie, @review), method: :delete, data: {confirm: "Are you sure"} %>
+    <%= link_to "Delete", movie_review_path(review.movie, review), method: :delete, data: {confirm: "Are you sure"} %>
+    
+
+
 
