--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -38,7 +38,7 @@
     <% if @movie.user_id == current_user.id %>
 
             <%= link_to "Edit",  edit_movie_path(@movie) %>
-            <%= link_to "Delete", movie_path(@movie),  method: :delete, data: {confirm: "Are you sure"} %>
+            <%= link_to "Delete", movie_path(@movie),  method: :delete %>
 
     <% end %> 
 
