--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -43,3 +43,13 @@
     <% end %> 
 
 <% end %>
+
+<script>
+	$('.review-rating').raty({
+		readOnly: true,
+		score: function() {
+			return $(this).attr('data-score');
+		},
+		path: '/assets/'
+	});
+</script>
