--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,9 +1,14 @@
-<p><%= review.rating %> </p>
+<p><%= review.rating %> </p><div class="review-rating" data-score="<%= review.rating.to_s %>"></div>
+
 <p><%= review.comment %> </p>
 
-    <%= link_to "Edit", edit_movie_review_path(review.movie, review)%>
-    <%= link_to "Delete", movie_review_path(review.movie, review), method: :delete, data: {confirm: "Are you sure"} %>
-    
+        <% if user_signed_in? %>
+           <% if review.user_id == current_user.id %>
+
+                <%= link_to "Edit", edit_movie_review_path(review.movie, review)%>
+                <%= link_to "Delete", movie_review_path(review.movie, review), method: :delete, data: {confirm: "Are you sure"} %>
+            <% end %>
+        <% end %>
 
 
 
