--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,9 @@
+<h2> testing</h2>
+
+
+
 <div class="row">
+
 
     <div class="col-md-6">
     <%= image_tag @movie.movie_img.url(:movie_show), class: "movie-show"%>
@@ -18,7 +23,7 @@
     </div>
 </div>
 
-
+            
             <h1><%=  @movie.title %></h1>
             <p>Description:     <%=  @movie.description %>  </p>
 
