--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,4 @@
-<p><%= review.rating %> </p><div class="review-rating" data-score="<%= review.rating.to_s %>"></div>
+<p><%= review.rating %> </p>
 
 <p><%= review.comment %> </p>
 
