--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,7 +4,7 @@
 
     <% @movies.each do |movie|%>
 
-     <div class="col-md-3">
+     <div class="col-sm-6 col-md-3">
          <a href="/movies/ <%= movie.id %>">
          <%= image_tag movie.movie_img.url(:movie_index), class: "movie" %>
          </a>
