--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,60 +1,77 @@
-<h2> testing</h2>
-
-
-
-<div class="row">
-
-
-    <div class="col-md-6">
-    <%= image_tag @movie.movie_img.url(:movie_show), class: "movie-show"%>
-</div>
-
-
-<div>
-
-<div class="row">
-    <div class="col-md-10">
-            
+<div class="panel panel-default">
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag @movie.movie_img.url(:movie_show), class: "movie-show"%>
+           <div class="table-responsive">
+          <table class="table">
+            <tbody>
+              <tr>
+                    <td><strong>Title:</strong></td>
+                    <h1><%=  @movie.title %></h1>
+                 </tr>
+              <tr>
+                <td><strong>Description:</strong></td>
+                <td>   <%=  @movie.description %></td>
+              </tr>
+              <tr>
+                <td><strong>Movie length:</strong></td>
+                <td><%= @movie.movie_length %></td>
+              </tr>
+              <tr>
+                <td><strong>Director:</strong></td>
+                <td><%= @movie.director %></td>
+              </tr>
+              <tr>
+                <td><strong>Rating:</strong></td>
+                <td><%= render @movie.reviews %></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+   </div>
+ </div>
         <div>
             <%= link_to "Add Review", new_movie_review_path(@movie) %>
             <%= link_to "Back", root_path %>
         </div>
-         <%= render @movie.reviews %>
-    </div>
-</div>
-
-            
-            <h1><%=  @movie.title %></h1>
-            <p>Description:     <%=  @movie.description %>  </p>
-
-<div class="col-md-10">
     
-      
-        <h6>Movie Length:   <%=  @movie.movie_length %> </h6>
-        <h6>Director:       <%=  @movie.director %>     </h6>
-        
-    </div>
-</div>
+        <div>
+            <% if user_signed_in? %>
+                <% if @movie.user_id == current_user.id %>
+                        <%= link_to "Edit",  edit_movie_path(@movie) %>
+                        <%= link_to "Delete", movie_path(@movie),  method: :delete %>
+                    <% end %> 
+                <% end %>
+            </div>
 
 
 
-<% if user_signed_in? %>
 
-    <% if @movie.user_id == current_user.id %>
 
-            <%= link_to "Edit",  edit_movie_path(@movie) %>
-            <%= link_to "Delete", movie_path(@movie),  method: :delete %>
 
-    <% end %> 
 
-<% end %>
 
-<script>
-	$('.review-rating').raty({
-		readOnly: true,
-		score: function() {
-			return $(this).attr('data-score');
-		},
-		path: '/assets/'
-	});
-</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
