stilling working on show

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -2,4 +2,5 @@
 <%= image_tag @movie.movie_img.url(:movie_show), class: "movie-show"%>
 <p> Rating: <%=@review.rating %></p>
 <p>Comment:  <%=@review.comment %></p>
+ <%= link_to "Back", root_path %>
 
