--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,11 +1,16 @@
-<h1>Edit Movie</h1>
+<div class="col-md-6 col-md-offset-3">
+    <div class="edit-movie-form">
 
-  <%= simple_form_for @movie do |f| %>
+            <h1>Edit Movie</h1>
 
-  <%= f.file_field :movie_img %>
-  <%= f.input :title, label: "Movie Title" %>
-  <%= f.input :description %>
-  <%= f.input :director %>
-  <%= f.input :movie_length %>
-  <%= f.button :submit %>
-<% end %>
+              <%= simple_form_for @movie do |f| %>
+
+              <%= f.file_field :movie_img %>
+              <%= f.input :title, label: "Movie Title" %>
+              <%= f.input :description %>
+              <%= f.input :director %>
+              <%= f.input :movie_length %>
+              <%= f.button :submit %>
+            <% end %>
+    </div>
+</div>
