--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,3 +1,9 @@
-<h1> New Movies </h1>
+<div class="col-md-6 col-md-offset-3">
+    <div class="new-movie-form">
 
-<%= render 'form' %>
+        <h1> New Movies </h1>
+
+        <%= render 'form' %>
+
+    </div>
+</div>
