--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,5 +1,11 @@
-<%= simple_form_for ([ @movie, @movie.reviews.build ]) do |f| %>
-    <%=f.input :rating, collection: 1..5 %>
-    <%=f.input :comment %>
-    <%=f.button :submit %>
-<%end%>
+<div class="col-md-6 col-md-offset-3">
+    <div class="new-movie-form">
+
+        <%= simple_form_for ([ @movie, @movie.reviews.build ]) do |f| %>
+            <%=f.input :rating, collection: 1..5 %>
+            <%=f.input :comment %>
+            <%=f.button :submit %>
+        <%end%>
+
+    </div>
+</div>
