--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,16 +13,29 @@
  *= require_tree .
  *= require_self
  */
+ 
+ @import url(http://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,500); 
+
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
  .movie {
      height: 350px;
      width: 300px;
+     padding: 1.5em 1.25em;
  }
 
  .movie-show {
     height: 475px;
     width:  500px;
+    padding: 1.5em 1.25em;
 
  }
+
+ background-tile {
+	box-sizing: border-box;
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 3px 3px 5px 6px #ccc;
+	
+}
