--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,7 @@
  *= require_self
  */
  
- @import url(http://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,500); 
+/* @import url(http://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,500); */
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
@@ -32,10 +32,10 @@
 
  }
 
- background-tile {
+/* background-tile {
 	box-sizing: border-box;
 	background-color: #fff;
 	border-radius: 5px;
 	box-shadow: 3px 3px 5px 6px #ccc;
 	
-}
+}*/
