--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -2,7 +2,7 @@
 
 
 <%= simple_form_for ([ @movie, @review ]) do |f| %>
-    <%=f.input :rating %>
+    <%=f.input :rating, collection: 1..5 %>
     <%=f.input :comment %>
     <%=f.button :submit %>
 <%end%>
