--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @movie do  |f| %>
   
   <%= f.hidden_field :user_id %>
-  <%= f.file_field :movie_img %>
+  <%= f.file_field :cover_picture %>
   <%= f.input :title, label: "Movie Title" %>
   <%= f.input :description %>
   <%= f.input :director %>
