--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
    
       <div class="col-md-6">
-        <%= image_tag @movie.movie_img.url(:movie_show), class: "movie-show"%>
+        <%= image_tag (@movie.cover_picture), class: "movie-show"%>
 
         
 
