--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -5,7 +5,7 @@
 
               <%= simple_form_for @movie do |f| %>
 
-              <%= f.file_field :cover_picture %>
+              <%= f.file_field :image %>
               <%= f.input :title, label: "Movie Title" %>
               <%= f.input :description %>
               <%= f.input :director %>
