--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,7 +5,11 @@
     <% @movies.each do |movie|%>
     <div class="col-sm-6 col-md-4">
          <a href="/movies/<%= movie.id %>">
-         <%= image_tag movie.movie_img.url(:movie_index), class: "movie" %>
+        
+        <%= image_tag movie.movie_img.url(:movie_show), class: "movie-show"%>
+         
+
+
          </a>
     </div>
     
