image on index page

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,13 +6,14 @@
     <div class="col-sm-6 col-md-4">
          <a href="/movies/<%= movie.id %>">
         
-        <%= image_tag movie.movie_img.url(:movie_show), class: "movie-show"%>
+        <%= image_tag movie.movie_img.url(:movie_index), class: "movie-index"%>
+
+      
+       
+        
          
-
-
-         </a>
+           
     </div>
     
     <% end %>
 </div>
-
