--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,5 +1,7 @@
 <p ><h1 style="text-align: center">Review</h1> </p>
-<%= image_tag @movie.movie_img.url(:movie_show), class: "movie-show"%>
+
+        
+<%= image_tag(@movie.cover_picture) if @movie.cover_picture.attached? %>
 <p> Rating: <%=@review.rating %></p>
 <p>Comment:  <%=@review.comment %></p>
  <%= link_to "Back", root_path %>
