--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
 
 				<% if user_signed_in? %>
 					<li><%= link_to "Add Movie", new_movie_path %></li>
+					<li><%= link_to "Add Suggestion", new_suggestion_path %></li>
 					
         <% else%>
         <li><%= link_to "Sign Up", new_user_registration_path %></li>
