Fix layout for new suggestions

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,7 +6,7 @@ img {
     margin-bottom: 40px;
 }
 </style>
-<h1> MOVIE REVIEW  </h1>
+<h1> MOVIE REVIEW testing </h1>
 
 <div class="row">
     <% @movies.inspect %>
