--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-6 col-md-offset-3">
     <div class="new-movie-form">
 
-        <h1> New Movies </h1>
+        <h1> New Movies testing part 2---</h1>
 
         <%= render 'form' %>
 
