--- a/app/views/suggestions/new.html.erb
+++ b/app/views/suggestions/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New Suggestion</h1>
+<%# <h1>New Suggestion</h1>
 
 <%= render 'form', suggestion: @suggestion %>
 
-<%= link_to 'Back', suggestions_path %>
+<%# <%= link_to 'Back', suggestions_path %> 
+
+
+<div class="col-md-6 col-md-offset-3">
+    <div class="new-movie-form">
+
+        <h1> New Suggestions !!!</h1>
+
+        <%= render 'form' %>
+
+    </div>
+</div>
