--- a/app/views/suggestions/_form.html.erb
+++ b/app/views/suggestions/_form.html.erb
@@ -1,5 +1,7 @@
 
-<%= simple_form_for(@suggestion) do |f| %>
+<%= simple_form_for @suggestion do |f| %>
+
+
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
