add suggestion path and own index page to show suggestions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 		<div class="container">
 
 			<div class="navbar-header">
-				<%= link_to "Movie Review", root_path, class: "navbar-brand" %>
+				<%= link_to "Movie Review", root_path, class: "navbar-brand" %><br>
+				<%= link_to "Suggestions", suggestions_path, class: "navbar-brand" %>
 			</div>
 
 			<ul class="nav navbar-nav">
