fix image to show up on view/suggestion/show  from movie_img to cover picture

--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -12,7 +12,8 @@
 
 <p>
   <strong>Movie img:</strong>
-  <%= link_to @suggestion.movie_img.filename, @suggestion.movie_img if @suggestion.movie_img.attached? %>
+  <%# <%= link_to @suggestion.movie_img.filename, @suggestion.movie_img if @suggestion.movie_img.attached? %> %>
+  <%= image_tag(@suggestion.cover_picture) if @suggestion.cover_picture.attached? %>
 </p>
 
 <p>
