--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -43,7 +43,7 @@
                <% if user_signed_in? %>
                  <% if @movie.user_id == current_user.id %>
                    <%= link_to "Edit",  edit_movie_path(@movie) %>
-                   <%= link_to "Delete", movie_path(@movie),  method: :delete %>
+                   <%= link_to "Delete---testing", movie_path(@movie),  method: :delete %>
                  <% end %>
                <% end %>
              </div>
