--- a/app/views/suggestions/_form.html.erb
+++ b/app/views/suggestions/_form.html.erb
@@ -3,19 +3,19 @@
 
 
   <%# <%= f.error_notification %>
-  <%# <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %> %>
+  <%# <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %> 
 
   <%# <div class="form-inputs">
     <%= f.input :title %>
     <%# <%= f.input :description %>
-    <%# <%= f.input :movie_img %> %>
-    <%# <%= f.input :comment %> %> %>
-  <%# </div> %> %>
+    <%# <%= f.input :movie_img %> 
+    <%# <%= f.input :comment %> 
+  <%# </div> %> 
 
   <%# <div class="form-actions"> %>
-    <%# <%= f.button :submit %> %>
+    <%# <%= f.button :submit %> 
   <%# </div> %>
-<%# <% end %> %> %> %>
+<%# <% end %> 
 
 <%= simple_form_for @suggestion do  |f| %>
   
@@ -23,7 +23,7 @@
   <%= f.file_field :cover_picture %>
   <%= f.input :title, label: "Movie Title" %>
   <%= f.input :description %>
-  <%# <%= f.input :director %> %>
-  <%# <%= f.input :movie_length %> %>
+  <%# <%= f.input :director %> 
+  <%# <%= f.input :movie_length %> 
   <%= f.button :submit %>
 <% end %>
